5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1692_1103.log
== TEST (2019-04-26 19:26:59) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(a<=x<=b) and (b>a):
	print(x,"pertence ao intervalo", a, "," , b)
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0   4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:27:24) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(a<=x<=b) and (b>a):
	print(x,"pertence ao intervalo", a, "," , b)
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0   4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:29:25) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(a<=x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0   4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:29:26) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(a<=x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0   4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:29:44) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(a<=x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0   4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:30:47) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(a=<x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
	
-- ERROR:
File "XXXX", line 5
    if(a=<x<=b):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:31:30) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(x>=a) and (x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
	
-- ERROR:
File "XXXX", line 5
    if(a=<x<=b):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:31:31) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(x>=a) and (x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
	
-- ERROR:
File "XXXX", line 5
    if(a=<x<=b):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:33:37) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(x>=a) and (x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
elif(b<=a):
	print(x, "nao pertence aos reais", a, "," , b)
	
-- ERROR:
File "XXXX", line 5
    if(a=<x<=b):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:36:14) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(x>=a) and (x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
elif(b<=a):
	print(x, "nao pertence aos reais", a, "," , b)
else:
	print("Entradas",a, "e", b, "invalidas")
-- EXECUTION TIME:
0.134053
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas 3.0 e 4.0 invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence aos reais 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:37:18) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(x>=a) and (x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
elif(b<=a):
	print("Entradas",a, "e" , b, "invalidas")
	
else:
	print(x, "nao pertence aos reais", a, "," , b)

-- OUTPUT:
2.0 nao pertence aos reais 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:37:19) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(x>=a) and (x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
elif(b<=a):
	print("Entradas",a, "e" , b, "invalidas")
	
else:
	print(x, "nao pertence aos reais", a, "," , b)

-- EXECUTION TIME:
0.181212
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence aos reais 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:37:31) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(x>=a) and (x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
elif(b<=a):
	print("Entradas",a, "e" , b, "invalidas")	
else:
	print(x, "nao pertence aos reais", a, "," , b)

-- OUTPUT:
2.0 nao pertence aos reais 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:38:06) 
-- CODE:
x=float(input("x"))
a=float(input("a"))
b=float(input("b"))

if(x>=a) and (x<=b):
	print(x,"pertence ao intervalo", a, "," , b)
elif(b<=a):
	print("Entradas",a, "e" , b, "invalidas")	
else:
	print(x, "nao pertence ao intervalo", a, "," , b)

-- EXECUTION TIME:
0.241404
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
